--- a/home.css
+++ b/home.css
@@ -1,4 +1,4 @@
-* {
+*{
   font-family: 'Montserrat', sans-serif;
   text-decoration: none;
   list-style: none;
@@ -26,14 +26,23 @@
   opacity: 0;
 }
 
+.carousel-container figure {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
 .carousel-container figure:nth-of-type(1) {
   animation: slide-in 9s infinite;
 }
 .carousel-container figure:nth-of-type(2) {
-  animation: slide-in 9s 5s infinite;
+  animation: slide-in 9s 3s infinite;
 }
 .carousel-container figure:nth-of-type(3) {
-  animation: slide-in 9s 8s infinite;
+  animation: slide-in 9s 6s infinite;
 }
 
 .carousel-container img {
@@ -62,54 +71,6 @@
   position: absolute;
   z-index: 999;
   background-color: #1E1E1E;
-}
-
-.line {
-  position: absolute;
-  width: 7px;
-  height: 280px;
-  left: 462px;
-  top: 381px;
-  z-index: 2;
-  background-color: #000000;
-  transform-origin: top;
-  transform: rotate(0deg);
-  animation: slideToLeft 2s forwards, rotateLine 2s forwards;
-}
-
-@keyframes slideToLeft {
-  0% {
-    left: 50%;
-  }
-  100% {
-    left: 462px;
-  }
-}
-
-@keyframes rotateLine {
-  0% {
-    transform: rotate(90deg);
-  }
-
-.title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1; /* Ensure the title appears behind the line */
-  text-align: center;
-  font-size: 2rem; /* Adjust the font size as needed */
-  opacity: 0;
-  animation: fadeIn 2s forwards 2s;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 
 .header {
@@ -153,6 +114,29 @@
   background-color:aquamarine;
 }
 
+.home-line{
+  position: absolute;
+  /* margin-left: 461.972px; */
+  width: 279.03px;
+  height: 0px;
+  /* left: 279px; */
+  /* top: 381px; */
+
+  border: 7px solid black;
+  transform: rotate(90deg);
+}
+
+.line{
+  position: absolute;
+  width: 7px;
+  height: 248px;
+  /* left: 462px; */
+  top: 34%;
+  left: 33%;
+  z-index: 2;
+  background-color: white;
+}
+
 .logo-black{
   display: flex;
   justify-content: center;
@@ -172,17 +156,18 @@
   font-size: 15px;
   line-height: 18px;
   text-align: justify;
+
   color: #F7F7F7;
 }
 
-.nav-container {
+.nav-container{
   margin: 0 100px 0 100px;
   height: 87px;
   display: flex;
   justify-content: space-between;
 }
 
-.textn {
+.textn{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -191,14 +176,29 @@
   font-weight: 600;
 }
 
-.textn a {
+.textn a{
   color: black;
 }
 
-.textn a:hover {
+.textn a:hover{
   color: #F92A82;
 }
 
+/* .title{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+} */
 
+.title-container{
+  position: absolute;
+  width: 460px;
+  height: 249px;
+  top: 34%; /* Adjust the value to move the box up or down */
+  left: 35%; /* Adjust the value to move the box left or right */
+  z-index: 2;
 
-
+  background: rgba(217, 217, 217, 0.6);
+  border-radius: 7px;
+}
