--- a/home.css
+++ b/home.css
@@ -106,6 +106,18 @@
     border-radius: 7px;
   }
 
+  .hero{
+    z-index: 2;
+  }
+
+  .hero-box{
+    display: flex;
+    flex-direction: row;
+    /* text-align: left; */
+    align-items: center;
+    justify-content: center;
+  }
+
   .hero-line{
     position: absolute;
     width: 7px;
@@ -113,7 +125,6 @@
     top: 34%;
     left: 33%;
     z-index: 2;
-
     background-color: white;
   }
 
@@ -125,6 +136,30 @@
     left: 36%;
     background-color: rgba(217, 217, 217, 0.6);
     border-radius: 7px;
+
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-title{
+    /* position: absolute; */
+    width: 400px;
+    height: 200px;
+    left: 5.23%;
+    
+    font-weight: 700;
+    font-size: 79px;
+    line-height: 70px;
+/* identical to box height */
+
+
+color: #FFFFFF;
+
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    
   }
   
   .logo-black{
