--- a/home.css
+++ b/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
+  
   *{
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
@@ -11,6 +13,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
   }
 
   .carousel-container input {
@@ -67,6 +70,27 @@
     }
   }
 
+  .darken{
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    left: 0px;
+    top: 569px;
+
+    background: #747272;
+    mix-blend-mode: multiply;
+  }
+
+  .desc-bg{
+    position: absolute;
+    width: 100%;
+    height: 500px;
+    left: 0px;
+    top: 569px;
+
+    background: #F7F7F7;
+  }
+
   .footer {
     position: absolute;
     z-index: 999;
@@ -82,6 +106,61 @@
     box-shadow: 0px 2px 4px 3px rgba(0, 0, 0, 0.05);
     width: 100%;
   }
+
+  .hero{
+    z-index: 2;
+  }
+
+  .hero-box{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-line{
+    position: absolute;
+    width: 7px;
+    height: 240px;
+    top: 34%;
+    left: 30%;
+    z-index: 2;
+    background-color: white;
+  }
+
+  .hero-container{
+    position: absolute;
+    width: 478px;
+    height: 240px;
+    top: 34%;
+    left: 33%;
+    background-color: rgba(217, 217, 217, 0.6);
+    border-radius: 7px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-title{
+    /* position: absolute; */
+    width: 400px;
+    height: 200px;
+    left: 5.23%;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    
+    font-weight: 700;
+    font-size: 70px;
+    line-height: 70px;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  /* .hero-container:hover{
+    
+  } */
 
   .highlight-nav {
     color: #F92A82;
@@ -106,60 +185,8 @@
     border-radius: 7px;
   }
 
-  .hero{
-    z-index: 2;
-  }
-
-  .hero-box{
-    display: flex;
-    flex-direction: row;
-    /* text-align: left; */
-    align-items: center;
-    justify-content: center;
-  }
-
-  .hero-line{
-    position: absolute;
-    width: 7px;
-    height: 240px;
-    top: 34%;
-    left: 33%;
-    z-index: 2;
-    background-color: white;
-  }
-
-  .hero-container{
-    position: absolute;
-    width: 478px;
-    height: 240px;
-    top: 34%;
-    left: 36%;
-    background-color: rgba(217, 217, 217, 0.6);
-    border-radius: 7px;
-
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .hero-title{
-    /* position: absolute; */
-    width: 400px;
-    height: 200px;
-    left: 5.23%;
-    
-    font-weight: 700;
-    font-size: 79px;
-    line-height: 70px;
-/* identical to box height */
-
-
-color: #FFFFFF;
-
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    
+  .highlight-motto{
+    color: #F92A82;
   }
   
   .logo-black{
@@ -185,18 +212,39 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     color: #F7F7F7;
   }
 
+  .modified-jockey{
+    margin-left: 6px;
+  }
+
+  .motto{
+    position: absolute;
+    top: 82%;
+    color: white;
+    font-size: 40px;
+    font-weight: 500;
+    text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  }
+
   .nav-container{
     margin: 0 100px 0 100px;
     height: 87px;
     display: flex;
     justify-content: space-between;
   }
+
+  .stats-bg img{
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    left: 0px;
+    top: 569px;
+  }
   
   .textn{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 60px;
+    gap: 57px;
     font-size: 20px;
     font-weight: 600;
   }
