--- a/home.css
+++ b/home.css
@@ -9,6 +9,11 @@
     padding: 0;
   }
 
+  .arrow{
+    width:20px;
+    height: 10px;
+  }
+
   .carousel-container {
     position: relative;
     width: 100%;
@@ -89,6 +94,40 @@
     top: 569px;
 
     background: #F7F7F7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .desc-title{
+    position: absolute;
+    top: 70px;
+    left: 735px;
+    font-weight: 400;
+    font-size: 30px;
+    color: black;
+  }
+
+  .desc-subtitle{
+    position: absolute;
+    top: 115px;
+    left: 735px;
+    font-weight: 700;
+    font-style: italic;
+    font-size: 20px;
+    color: #F6BE9A;
+  }
+
+  .desc-text{
+    position: absolute;
+    top: 180px;
+    left: 735px;
+    width: 360px;
+    height: 280px;
+    text-align: justify;
+    word-wrap: normal;
+    font-weight: 500;
+    font-size: 15px;
   }
 
   .footer {
@@ -158,9 +197,13 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 
-  /* .hero-container:hover{
-    
+  /* .hero-title-black:hover{
+    color: black;
   } */
+
+  .hero-title span:hover{
+    color: black;
+  }
 
   .highlight-nav {
     color: #F92A82;
@@ -230,6 +273,33 @@
     height: 87px;
     display: flex;
     justify-content: space-between;
+  }
+
+  .plan-button{
+    position: absolute;
+    width: 185px;
+    height: 40px;
+    top: 380px;
+    left:735px;
+    padding-left: 10px;
+
+    background: #F7F7F7;
+    color:#F92A82;
+    border: 1px solid #F92A82;
+    border-radius: 7px;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    gap:15px;
+    text-align: center;
+    
+    
+  }
+
+  .plan-button:hover{
+    color:#F7F7F7;
+    background: #F92A82;
+    border-radius: 7px;
   }
 
   .stats-bg img{
