--- a/home.css
+++ b/home.css
@@ -404,6 +404,19 @@
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(assets/kcgoldenage.jpg);
   }
 
+  .container-text {
+    position: absolute;
+    margin: center;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  
+
   .schedule-title{
     font-size: 60px;
     font-weight: 700;
