--- a/contact.css
+++ b/contact.css
@@ -110,7 +110,7 @@
     height: 0px;
     right: 155px;
     top: 370px;
-    border: 3px solid #F7F7F7;
+    border: 3px solid #FFFFFF;
     align-items:end;
   }
 
@@ -120,7 +120,7 @@
     height: 25px;
     left: 399px;
     top: -13px;
-    background-color: #F7F7F7;
+    background-color: #FFFFFF;
     transform: rotate(45deg);
   }
 
