--- a/events1.css
+++ b/events1.css
@@ -1,5 +1,6 @@
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
 /* margin mentok dari left: 100px   */
+/* font turunin 7 px buat event text */
   *{
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
@@ -7,6 +8,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+  }
+
+  html{
+    background-color: #EDEDED;
   }
 
   .copyright{
@@ -18,10 +23,74 @@
     text-align: center;
   }
 
+  .event-box{
+    background-color:#F7F7F7;
+    width: 830px;
+    height: 260px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .event-box img{
+    height: 260px;
+    width: 300px;
+  }
+
+  .event-container{
+    position: relative;
+    width: 830px;
+    height: 1175px;
+    /* background-color: #F6BE9A; */
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .event-date{
+    color: black;
+    font-weight: 600;
+    font-size: 27px;
+  }
+
+  .event-desc{
+    width: 375px;
+    height: 70px;
+    margin-top: 5px;
+    font-weight: 300;
+    font-size: 15px;
+    text-align: justify;
+    color:black;
+  }
+
+  .event-name{
+    color:#F92A82;
+    font-weight: 700;
+    font-size: 33px;
+    margin-top: 15px;
+  }
+
+  .event-text{
+    height: 260px;
+    width:450px;
+    padding-top: 40px;
+  }
+
+  .event-time{
+    margin-top: 3px;
+    color: #979DAD;
+    font-weight: 400;
+    font-size: 14px;
+  }
+
   .explore{
     width: 143px;
     height: 147px;
-    /* position: relative; */
   }
 
   .facebook{
@@ -95,7 +164,6 @@
     position: relative;
     width: 100%;
     height: 80vh;
-    background-color:#F6BE9A;
   }
 
   .hero-bg-img{
@@ -110,7 +178,7 @@
     height: 0px;
     right: 155px;
     top: 370px;
-    border: 3px solid #F7F7F7;
+    border: 3px solid #FFFFFF;
     align-items:end;
   }
 
@@ -120,7 +188,7 @@
     height: 25px;
     left: 399px;
     top: -13px;
-    background-color: #F7F7F7;
+    background-color: #FFFFFF;
     transform: rotate(45deg);
   }
 
@@ -205,6 +273,84 @@
     justify-content: space-between;
   }
 
+  .newsletter-bg{
+    position: relative;
+    width: 830px;
+    height: 200px;
+    margin: auto;
+    margin-top: 60px;
+    background-color:#F6BE9A;
+    border-radius: 7px;
+  }
+
+  .newsletter span{
+    color:#F92A82;
+  }
+
+  .newsletter input{
+    position: relative;
+    height: 30px;
+    width: 170px;
+    padding-left: 10px;
+    margin-top: 27px;
+    margin-left: 30px;
+    left: 600px;
+    top: -55px;
+    background: #FFFFFF;
+    border: 1px solid #F0F0F0;
+    border-radius: 7px;
+    font-size: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .newsletter-text{
+    position: relative;
+    padding-top: 60px;
+    padding-left: 30px;
+    width: 600px;
+    height: 100px;
+  }
+
+  .newsletter-title{
+    font-weight: 700;
+    font-size: 43px;
+    color: black;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  .newsletter-subtitle{
+    font-weight: 600;
+    font-size: 20px;
+    padding-top: 5px;
+    padding-left: 3px;
+  }
+
+  .send-button{
+    position: relative;
+    top: -45px;
+    left: 750px;
+    width: 50px;
+    height: 20px;
+    background: #F7F7F7;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color:#F92A82;
+    font-weight: 500;
+    font-size: 9px;
+  }
+
+  .send-button:hover{
+    background-color: #F92A82;
+    color:#F7F7F7;
+  }
+
+
   .textn{
     display: flex;
     justify-content: center;
@@ -222,6 +368,36 @@
     color: #F92A82;
   }
 
+  .week{
+    width: 200px;
+    height: 120px;
+    background-color: white;
+
+    text-align: center;
+    vertical-align: middle;
+    line-height: 120px;
+    color:black;
+    font-weight: 600;
+    font-size: 22px;
+  }
+
+  .week:hover{
+    background-color: #F92A82;
+    color:#FFFFFF;
+  }
+
+  .week-container{
+    position: relative;
+    width: 830px;
+    height: 120px;
+    margin: auto;
+    margin-top: 30px;
+    /* background-color: #F92A82; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   .youtube{
     width: 80px;
     margin-top: 8px;
@@ -229,4 +405,9 @@
     align-items: center;
     justify-content: space-between;
     gap: 7px;
+  }
+
+  #week1{
+    color:#FFFFFF;
+    background-color: #F92A82;
   }
