Events done, Pricing done!
Done adding highlight upon clicking newsletter input, pricing page all done! Still a bonus to figure out "Book Now" as a button and knowing where it should  lead. :sweat:

--- a/events1.css
+++ b/events1.css
@@ -306,6 +306,10 @@
     align-items: center;
   }
 
+  .newsletter input:focus{
+    outline:none;
+  }
+
   .newsletter-text{
     position: relative;
     padding-top: 60px;
