--- a/events2.css
+++ b/events2.css
@@ -306,6 +306,10 @@
     align-items: center;
   }
 
+  .newsletter input:focus{
+    outline:none;
+  }
+
   .newsletter-text{
     position: relative;
     padding-top: 60px;
