--- a/pricing.css
+++ b/pricing.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
 /* margin mentok dari left: 100px   */
   *{
     font-family: 'Montserrat', sans-serif;
@@ -7,6 +7,64 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+  }
+
+  html{
+    background-color: #EDEDED;
+  }
+
+  .benefit-check{
+    position: relative;
+    width: 18px;
+    height: 198px;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  .benefit-container{
+    position: relative;
+    width: 210px;
+    height: 200px;
+    margin-top: 50px;
+    margin-left: 50px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .benefit-container img{
+    position: relative;
+    width: 15px;
+    height: 15px;
+  }
+
+  .benefit-text{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    font-weight: 300;
+    font-size: 15px;
+  }
+
+  .book-now{
+    width: 110px;
+    height: 45px;
+    margin: auto;
+    margin-top: 45px;
+    background: #F6BE9A;
+    border-radius: 16px;
+
+    font-weight: 500;
+    font-size: 15px;
+    color: #FFFFFF;
+    text-align: center;
+    line-height: 45px;
+
   }
 
   .copyright{
@@ -47,7 +105,7 @@
     position: absolute;
     width: 100%;
     height: 300px;
-    top: 2145px;
+    top: 1125px;
     background-color:#1E1E1E;
   }
 
@@ -203,6 +261,58 @@
     height: 87px;
     display: flex;
     justify-content: space-between;
+  }
+
+  .price{
+    height: 550px;
+    width: 300px;
+    background-color: #FFFFFF;
+  }
+
+  .price:hover .price-tag{
+    background-color: #F92A82;
+  }
+
+  .price:hover .price-num{
+    color:#F92A82;
+  }
+
+  .price:hover .book-now{
+    background-color: #F92A82;
+  }
+
+  .price-container{
+    margin: auto;
+    position: relative;
+    height: 550px;
+    width: 1040px;
+    margin-top: 60px;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .price-num{
+    font-weight: 600;
+    font-size: 30px;
+    color:#F6BE9A;
+    text-align: center;
+    margin: auto;
+    margin-top: 35px;
+  }
+
+  .price-tag{
+    width: 300px;
+    height: 90px;
+    background-color: #F6BE9A;
+    text-align: center;
+  }
+
+  .price-tag p{
+    font-weight: 800;
+    font-size: 23px;
+    line-height: 95px;
+    text-align: center;
   }
 
   .textn{
