--- a/contact.css
+++ b/contact.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
 /* margin mentok dari left: 100px   */
   *{
     font-family: 'Montserrat', sans-serif;
@@ -7,6 +7,50 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+  }
+
+  html{
+    background-color: #EDEDED;
+  }
+
+  .circle{
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background: rgba(247, 247, 247, 0.5);
+    text-align: center;
+  }
+
+  .contact-us{
+    width: 350px;
+    height: 450px;
+    background-color: #F6BE9A;
+    border-radius: 7px 0px 0px 7px;
+  }
+
+  .contact-info{
+    width: 250px;
+    height: 50px;
+    /* background-color:bisque; */
+    margin-top: 50px;
+    margin-left: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .contact-info p{
+    width: 150px;
+    text-align: justify;
+    font-weight: 500;
+    font-size: 11px;
+    color:#FFFFFF;
+  }
+
+  .contact-info span{
+    color:#F92A82;
+    font-weight: 800;
   }
 
   .copyright{
@@ -21,7 +65,6 @@
   .explore{
     width: 143px;
     height: 147px;
-    /* position: relative; */
   }
 
   .facebook{
@@ -43,11 +86,36 @@
     height: 21px;
   }
 
+  .form{
+    margin: auto;
+    margin-top: 80px;
+    width: 900px;
+    height: 450px;
+    background-color: #FFFFFF;
+    border-radius: 7px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .form-title{
+    font-weight: 800;
+    font-size: 27px;
+    margin-left: 53px;
+    margin-top: 50px;
+    color:black;
+  }
+
+  .form-title span{
+    color:#FFFFFF;
+  }
+
   .footer-bg{
     position: absolute;
     width: 100%;
     height: 300px;
-    top: 2145px;
+    top: 1830px;
     background-color:#1E1E1E;
   }
 
@@ -161,6 +229,15 @@
     justify-content: space-around;
   }
 
+  .location{
+    position: absolute;
+    width: 60px;
+    height: 30px;
+    left: -10px;
+    top: 6px;
+
+  }
+
   .logo-black{
     display: flex;
     justify-content: center;
@@ -198,11 +275,134 @@
     color: #F6BE9A;
   }
 
+  .map-container{
+    text-align: center;
+  }
+
+  .map-container p{
+    margin-top: 80px;
+    font-weight: 700;
+    font-size: 70px;
+  }
+
+  .map{
+    margin: auto;
+    margin-top: 70px;
+  }
+
+  .map iframe{
+    width: 72%;
+    height:500px;
+    border-style: groove;
+  }
+
+  .message{
+    width: 425px;
+    height: 100px;
+    margin-top: 15px;
+    margin-left: 50px;
+    background-color: #F6BE9A;
+  }
+
+  .message textarea{
+    width: 425px;
+    height: 100px;
+    text-align: justify;
+    resize: none;
+    
+    padding-top: 10px;
+    padding-left: 10px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+  }
+
+  .name-email{
+    width: 425px;
+    height: 35px;
+    margin-top: 50px;
+    margin-left: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* background-color: #F6BE9A; */
+  }
+
+  .name-email input{
+    width: 200px;
+    height: 35px;
+    padding-left: 10px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    /* border-radius: 2px; */
+  }
+
   .nav-container{
     margin: 0 100px 0 100px;
     height: 87px;
     display: flex;
     justify-content: space-between;
+  }
+
+  .phone-email{
+    width: 25px;
+    height: 25px;
+    margin-top: 7px;
+    margin-left: 1px;
+  }
+
+  .phone-number{
+    width: 425px;
+    height: 35px;
+    margin-left: 50px;
+    margin-top: 15px;
+    background-color: #F6BE9A;
+  }
+
+  .phone-number input{
+    width: 425px;
+    height: 35px;
+    padding-left: 10px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+  }
+
+  .preference{
+    width: 425px;
+    margin-left: 50px;
+    margin-top: 15px;
+    font-weight: 400;
+    font-size: 13px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .send-button button{
+    width: 50px;
+    height: 20px;
+    margin-top: 15px;
+    margin-left: 50px;
+    background-color: #F6BE9A;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border:none;
+
+    color:#F92A82;
+    font-weight: 500;
+    font-size: 9px;
+  }
+
+  .send-button button:hover{
+    background-color: #F92A82;
+    color:#F7F7F7;
+  }
+
+  .reach-out{
+    width: 550px;
+    height: 450px;
   }
 
   .textn{
@@ -229,4 +429,8 @@
     align-items: center;
     justify-content: space-between;
     gap: 7px;
+  }
+
+  #email-choice{
+    margin-left: 25px;
   }
