--- a/about.css
+++ b/about.css
@@ -330,7 +330,7 @@
     justify-content: center;
     align-items: center;
     gap: 57px;
-    font-size: 20px;
+    font-size: 1.1rem;
     font-weight: 600;
   }
 
