--- a/home.css
+++ b/home.css
@@ -654,7 +654,7 @@
     justify-content: center;
     align-items: center;
     gap: 57px;
-    font-size: 20px;
+    font-size: 1.1rem;
     font-weight: 600;
   }
 
