--- a/home.css
+++ b/home.css
@@ -460,8 +460,8 @@
   }
   
   .logo-black img{
-    width: 160px;
-    height: 54px;
+    width: 10rem;
+    height: 3.375rem;
   }
 
   .logo-white{
@@ -653,7 +653,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 57px;
+    gap: 3.563rem;
     font-size: 1.1rem;
     font-weight: 600;
   }
@@ -681,4 +681,9 @@
     align-items: center;
     justify-content: space-between;
     gap: 7px;
+  }
+
+  @media only screen and (max-width: 768px) {
+    /* CSS rules for screen width less than or equal to 768px */
+    /* Add similar rules as mobile, adjust as needed */
   }
