--- a/contactresp.css
+++ b/contactresp.css
@@ -15,36 +15,36 @@
 
   .circle{
     position: relative;
-    width: 40px;
-    height: 40px;
+    width: 2.5rem;
+    height: 2.5rem;
     border-radius: 100%;
     background: rgba(247, 247, 247, 0.5);
     text-align: center;
   }
 
   .contact-us{
-    width: 350px;
-    height: 450px;
+    width: 21.875rem;
+    height: 28.125rem;
     background-color: #F6BE9A;
-    border-radius: 7px 0px 0px 7px;
+    border-radius: 0.4375rem 0 0 0.4375rem;
   }
 
   .contact-info{
-    width: 250px;
-    height: 50px;
+    width: 15.625rem;
+    height: 3.125rem;
     /* background-color:bisque; */
-    margin-top: 50px;
-    margin-left: 50px;
+    margin-top: 3.125rem;
+    margin-left: 3.125rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
   }
 
   .contact-info p{
-    width: 150px;
+    width: 9.375rem;
     text-align: justify;
     font-weight: 500;
-    font-size: 11px;
+    font-size: 0.6875rem;
     color:#FFFFFF;
   }
 
@@ -55,44 +55,44 @@
 
   .copyright{
     position: relative;
-    top: 120px;
+    margin-top: 3%;
     font-weight: 400;
-    font-size: 11px;
+    font-size: 0.6875rem;
     color: #FFD8BE;
     text-align: center;
   }
 
   .explore{
-    width: 145px;
-    height: 147px;
+    width: 9.0625rem;
+    height: 9.1875rem;
   }
 
   .facebook{
-    width: 80px;
-    margin-top: 8px;
+    width: 5rem;
+    margin-top: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 7px;
+    gap: 0.4375rem;
   }
 
   .follow{
-    width: 146px;
-    height: 120px;
+    width: 9.125rem;
+    height: 7.5rem;
   }
 
   .follow img{
-    width: 21px;
-    height: 21px;
+    width: 1.3125rem;
+    height: 1.3125rem;
   }
 
   .form{
     margin: auto;
-    margin-top: 80px;
-    width: 900px;
-    height: 450px;
+    margin-top: 5rem;
+    width: 56.25rem;
+    height: 28.125rem;
     background-color: #FFFFFF;
-    border-radius: 7px;
+    border-radius: 0.4375rem;
 
     display: flex;
     justify-content: space-between;
@@ -101,9 +101,9 @@
 
   .form-title{
     font-weight: 800;
-    font-size: 27px;
-    margin-left: 53px;
-    margin-top: 50px;
+    font-size: 1.6875rem;
+    margin-left: 3.3125rem;
+    margin-top: 3.125rem;
     color:black;
   }
 
@@ -114,16 +114,16 @@
   .footer-bg{
     position: absolute;
     width: 100%;
-    height: 300px;
-    top: 1830px;
+    height: 18.75rem;
+    top: 114.375rem;
     background-color:#1E1E1E;
   }
 
   .footer-desc{
-    margin: 10px 0 10px 0;
+    margin: 0.625rem 0 0.625rem 0;
     font-weight: 300;
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 0.875rem;
+    line-height: 1.125rem;
     color: #F7F7F7;
   }
 
@@ -138,7 +138,7 @@
   .footer-link{
     color:#F7F7F7;
     font-weight: 300;
-    font-size: 13px;
+    font-size: 0.8125rem;
   }
 
   .footer-link:hover{
@@ -148,14 +148,14 @@
   .footer-title{
     color: #F6BE9A;
     font-weight: 800;
-    font-size: 17px;
+    font-size: 1.0625rem;
   }
 
   .header {
     position: fixed;
     z-index: 10;
     background-color: #ffff;
-    box-shadow: 0px 2px 4px 3px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0.125rem 0.25rem 0.1875rem rgba(0, 0, 0, 0.05);
     width: 100%;
   }
 
@@ -163,7 +163,6 @@
     position: relative;
     width: 100%;
     height: 80vh;
-    background-color:#F6BE9A;
   }
 
   .hero-bg-img{
@@ -174,31 +173,31 @@
 
   .hero-line{
     position: absolute;
-    width: 410px;
+    width: 25.625rem;
     height: 0px;
-    right: 155px;
-    top: 370px;
-    border: 3px solid #FFFFFF;
+    margin-left: 55%;
+    margin-top: -7%;
+    border: 0.1875rem solid #FFFFFF;
     align-items:end;
   }
 
   .hero-line-diamond{
     position: absolute;
-    width: 25px;
-    height: 25px;
-    left: 399px;
-    top: -13px;
+    width: 1.5625rem;
+    height: 1.5625rem;
+    left: 24.9375rem;
+    top: -0.8125rem;
     background-color: #FFFFFF;
     transform: rotate(45deg);
   }
 
   .hero-title{
     position: absolute;
-    left: 100px;
-    top: 300px;
+    margin-left: 9%;
+    margin-top: -12.5%;
     color:#FFFFFF;
     font-weight: 700;
-    font-size: 100px;
+    font-size: 6.25rem;
   }
 
   .highlight-nav {
@@ -206,13 +205,13 @@
   }
 
   .information{
-    width: 170px;
-    height: 120px;
+    width: 10.625rem;
+    height: 7.5rem;
   }
 
   .instagram{
-    width: 73px;
-    margin-top: 8px;
+    width: 4.5625rem;
+    margin-top: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -220,21 +219,22 @@
 
   .level{
     position: relative;
-    width: 600px;
-    height: 147px;
-    left: 565px;
-    top: 75px;
+    padding-top: 6.3%;
+    /* top: 4.6875rem; */
+    margin-right: 9%;
+    margin-left: 40%;
     display: flex;
     align-items:baseline;
-    justify-content: space-around;
+    justify-content: space-between;
+    gap: 1rem;
   }
 
   .location{
     position: absolute;
-    width: 60px;
-    height: 30px;
-    left: -10px;
-    top: 6px;
+    width: 3.75rem;
+    height: 1.875rem;
+    left: -0.625rem;
+    top: 0.375rem;
 
   }
 
@@ -249,24 +249,26 @@
   }
 
   .logo-white{
-    top: 79px;
-    left: 100px;
-    width: 205px;
-    height: 126px;
+    margin-top: 6.3%;
+    /* top: 4.9375rem; */
+    margin-left: 9%;
+    /* margin-right: 28%; */
+    /* width: 12.8125rem; */
+    height: 7.875rem;
     position: absolute;
   }
 
   .logo-white img{
-    width: 160px;
-    height: 54px;
+    width: 10rem;
+    height: 3.375rem;
   }
 
   .logo-white p{
-    margin-top: 10px;
-    width: 205px;
+    margin-top: 0.625rem;
+    width: 12.8125rem;
     color: #F7F7F7;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 0.8125rem;
     text-align: justify;
   }
 
@@ -279,47 +281,47 @@
   }
 
   .map-container p{
-    margin-top: 80px;
+    margin-top: 6%;
     font-weight: 700;
-    font-size: 70px;
+    font-size: 4.375rem;
   }
 
   .map{
     margin: auto;
-    margin-top: 70px;
+    margin-top: 5%;
   }
 
   .map iframe{
     width: 72%;
-    height:500px;
+    height:31.25rem;
     border-style: groove;
   }
 
   .message{
-    width: 425px;
-    height: 100px;
-    margin-top: 15px;
-    margin-left: 50px;
+    width: 26.5625rem;
+    height: 6.25rem;
+    margin-top: 0.9375rem;
+    margin-left: 3.125rem;
     background-color: #F6BE9A;
   }
 
   .message textarea{
-    width: 425px;
-    height: 100px;
+    width: 26.5625rem;
+    height: 6.25rem;
     text-align: justify;
     resize: none;
     
-    padding-top: 10px;
-    padding-left: 10px;
+    padding-top: 0.625rem;
+    padding-left: 0.625rem;
     background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 0.0625rem solid rgba(0, 0, 0, 0.2);
   }
 
   .name-email{
-    width: 425px;
-    height: 35px;
-    margin-top: 50px;
-    margin-left: 50px;
+    width: 26.5625rem;
+    height: 2.1875rem;
+    margin-top: 3.125rem;
+    margin-left: 3.125rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -327,50 +329,51 @@
   }
 
   .name-email input{
-    width: 200px;
-    height: 35px;
-    padding-left: 10px;
+    width: 12.5rem;
+    height: 2.1875rem;
+    padding-left: 0.625rem;
     background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 0.0625rem solid rgba(0, 0, 0, 0.2);
     /* border-radius: 2px; */
   }
 
   .nav-container{
-    margin: 0 100px 0 100px;
-    height: 87px;
+    margin: 0 9% 0 9%;
+    height: 5.4375rem;
     display: flex;
     justify-content: space-between;
+    min-width: 768px;
   }
 
   .phone-email{
-    width: 25px;
-    height: 25px;
-    margin-top: 7px;
-    margin-left: 1px;
+    width: 1.5625rem;
+    height: 1.5625rem;
+    margin-top: 0.4375rem;
+    margin-left: 0.0625rem;
   }
 
   .phone-number{
-    width: 425px;
-    height: 35px;
-    margin-left: 50px;
-    margin-top: 15px;
+    width: 26.5625rem;
+    height: 2.1875rem;
+    margin-left: 3.125rem;
+    margin-top: 0.9375rem;
     background-color: #F6BE9A;
   }
 
   .phone-number input{
-    width: 425px;
-    height: 35px;
-    padding-left: 10px;
+    width: 26.5625rem;
+    height: 2.1875rem;
+    padding-left: 0.625rem;
     background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 0.0625rem solid rgba(0, 0, 0, 0.2);
   }
 
   .preference{
-    width: 425px;
-    margin-left: 50px;
-    margin-top: 15px;
+    width: 26.5625rem;
+    margin-left: 3.125rem;
+    margin-top: 0.9375rem;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 0.6875rem;
 
     display: flex;
     justify-content: space-between;
@@ -378,20 +381,19 @@
   }
 
   .send-button button{
-    width: 50px;
-    height: 20px;
-    margin-top: 15px;
-    margin-left: 50px;
+    width: 3.125rem;
+    height: 1.25rem;
+    margin-top: 0.9375rem;
+    margin-left: 3.125rem;
     background-color: #F6BE9A;
-    border-radius: 6px;
+    border-radius: 0.375rem;
     display: flex;
     align-items: center;
     justify-content: center;
     border:none;
-
     color:#F92A82;
     font-weight: 500;
-    font-size: 9px;
+    font-size: 0.5625rem;
   }
 
   .send-button button:hover{
@@ -400,15 +402,15 @@
   }
 
   .reach-out{
-    width: 550px;
-    height: 450px;
+    width: 34.375rem;
+    height: 28.125rem;
   }
 
   .textn{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 57px;
+    gap: 3.563rem;
     font-size: 1.1rem;
     font-weight: 600;
   }
@@ -422,16 +424,16 @@
   }
 
   .youtube{
-    width: 80px;
-    margin-top: 8px;
+    width: 5rem;
+    margin-top: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 7px;
+    gap: 0.4375rem;
   }
 
   #email-choice{
-    margin-left: 25px;
+    margin-left: 1.5625rem;
   }
 
   @media only screen and (max-width: 768px){
