--- a/pricingresp.css
+++ b/pricingresp.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
-/* margin mentok dari left: 100px   */
+/* margin mentok dari left: 6.25rem   */
   *{
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
@@ -15,8 +15,8 @@
 
   .benefit-check{
     position: relative;
-    width: 18px;
-    height: 198px;
+    width: 1.125rem;
+    height: 12.375rem;
     display:flex;
     align-items: center;
     justify-content: space-between;
@@ -25,95 +25,91 @@
 
   .benefit-container{
     position: relative;
-    width: 210px;
-    height: 200px;
-    margin-top: 50px;
-    margin-left: 50px;
+    width: 13.125rem;
+    height: 12.5rem;
+    margin-top: 3.125rem;
+    margin-left: 3.125rem;
     display: flex;
     justify-content: space-between;
   }
 
   .benefit-container img{
     position: relative;
-    width: 15px;
-    height: 15px;
+    width: 0.9375rem;
+    height: 0.9375rem;
   }
 
   .benefit-text{
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: 12.5rem;
+    height: 12.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
     font-weight: 300;
-    font-size: 15px;
+    font-size: 0.9375rem;
   }
 
   .book-now{
-    width: 110px;
-    height: 45px;
+    width: 6.875rem;
+    height: 2.8125rem;
     margin: auto;
-    margin-top: 45px;
+    margin-top: 2.8125rem;
     background: #F6BE9A;
-    border-radius: 16px;
-
+    border-radius: 1rem;
     font-weight: 500;
-    font-size: 15px;
+    font-size: 0.9375rem;
     color: #FFFFFF;
     text-align: center;
-    line-height: 45px;
-
+    line-height: 2.8125rem;
   }
 
   .copyright{
     position: relative;
-    top: 120px;
+    margin-top: 3%;
     font-weight: 400;
-    font-size: 11px;
+    font-size: 0.6875rem;
     color: #FFD8BE;
     text-align: center;
   }
 
   .explore{
-    width: 145px;
-    height: 147px;
-    /* position: relative; */
+    width: 9.0625rem;
+    height: 9.1875rem;
   }
 
   .facebook{
-    width: 80px;
-    margin-top: 8px;
+    width: 5rem;
+    margin-top: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 7px;
+    gap: 0.4375rem;
   }
 
   .follow{
-    width: 146px;
-    height: 120px;
+    width: 9.125rem;
+    height: 7.5rem;
   }
 
   .follow img{
-    width: 21px;
-    height: 21px;
+    width: 1.3125rem;
+    height: 1.3125rem;
   }
 
   .footer-bg{
     position: absolute;
     width: 100%;
-    height: 300px;
-    top: 1125px;
+    height: 18.75rem;
+    top: 70.3125rem;
     background-color:#1E1E1E;
   }
 
   .footer-desc{
-    margin: 10px 0 10px 0;
+    margin: 0.625rem 0 0.625rem 0;
     font-weight: 300;
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 0.875rem;
+    line-height: 1.125rem;
     color: #F7F7F7;
   }
 
@@ -128,7 +124,7 @@
   .footer-link{
     color:#F7F7F7;
     font-weight: 300;
-    font-size: 13px;
+    font-size: 0.8125rem;
   }
 
   .footer-link:hover{
@@ -138,14 +134,14 @@
   .footer-title{
     color: #F6BE9A;
     font-weight: 800;
-    font-size: 17px;
+    font-size: 1.0625rem;
   }
 
   .header {
     position: fixed;
     z-index: 10;
     background-color: #ffff;
-    box-shadow: 0px 2px 4px 3px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0.125rem 0.25rem 0.1875rem rgba(0, 0, 0, 0.05);
     width: 100%;
   }
 
@@ -164,31 +160,33 @@
 
   .hero-line{
     position: absolute;
-    width: 410px;
+    width: 25.625rem;
     height: 0px;
-    right: 155px;
-    top: 370px;
-    border: 3px solid #FFFFFF;
+    margin-left: 55%;
+    /* right: 9.6875rem; */
+    margin-top: -7%;
+    /* top: 23.125rem; */
+    border: 0.1875rem solid #FFFFFF;
     align-items:end;
   }
 
   .hero-line-diamond{
     position: absolute;
-    width: 25px;
-    height: 25px;
-    left: 399px;
-    top: -13px;
+    width: 1.5625rem;
+    height: 1.5625rem;
+    left: 24.9375rem;
+    top: -0.8125rem;
     background-color: #FFFFFF;
     transform: rotate(45deg);
   }
 
   .hero-title{
     position: absolute;
-    left: 100px;
-    top: 300px;
+    margin-left: 9%;
+    margin-top: -12.5%;
     color:#FFFFFF;
     font-weight: 700;
-    font-size: 100px;
+    font-size: 6.25rem;
   }
 
   .highlight-nav {
@@ -196,13 +194,13 @@
   }
 
   .information{
-    width: 170px;
-    height: 120px;
+    width: 10.625rem;
+    height: 7.5rem;
   }
 
   .instagram{
-    width: 73px;
-    margin-top: 8px;
+    width: 4.5625rem;
+    margin-top: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -210,19 +208,21 @@
 
   .level{
     position: relative;
-    width: 600px;
-    height: 147px;
-    left: 565px;
-    top: 75px;
+    padding-top: 6.3%;
+    /* top: 4.6875rem; */
+    margin-right: 9%;
+    margin-left: 40%;
     display: flex;
     align-items:baseline;
-    justify-content: space-around;
+    justify-content: space-between;
+    gap: 1rem;
   }
 
   .logo-black{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: auto;
   }
 
   .logo-black img{
@@ -230,24 +230,26 @@
   }
 
   .logo-white{
-    top: 79px;
-    left: 100px;
-    width: 205px;
-    height: 126px;
+    margin-top: 6.3%;
+    /* top: 4.9375rem; */
+    margin-left: 9%;
+    /* margin-right: 28%; */
+    /* width: 12.8125rem; */
+    height: 7.875rem;
     position: absolute;
   }
 
   .logo-white img{
-    width: 160px;
-    height: 54px;
+    width: 10rem;
+    height: 3.375rem;
   }
 
   .logo-white p{
-    margin-top: 10px;
-    width: 205px;
+    margin-top: 0.625rem;
+    width: 12.8125rem;
     color: #F7F7F7;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 0.8125rem;
     text-align: justify;
   }
 
@@ -256,15 +258,16 @@
   }
 
   .nav-container{
-    margin: 0 100px 0 100px;
-    height: 87px;
+    margin: 0 9% 0 9%;
+    height: 5.4375rem;
     display: flex;
     justify-content: space-between;
+    min-width: 768px;
   }
 
   .price{
-    height: 550px;
-    width: 300px;
+    height: 34.375rem;
+    /* width: 18.75rem; */
     background-color: #FFFFFF;
   }
 
@@ -281,36 +284,38 @@
   }
 
   .price-container{
-    margin: auto;
     position: relative;
-    height: 550px;
-    width: 1040px;
-    margin-top: 60px;
+    height: 34.375rem;
+    margin-left: 9%;
+    margin-right: 9%;
+    margin-top: 3.75rem;
+    /* gap: 1.3rem; */
     display:flex;
     align-items: center;
     justify-content: space-between;
+    min-width: 920px;
   }
 
   .price-num{
     font-weight: 600;
-    font-size: 30px;
+    font-size: 1.875rem;
     color:#F6BE9A;
     text-align: center;
     margin: auto;
-    margin-top: 35px;
+    margin-top: 2.1875rem;
   }
 
   .price-tag{
-    width: 300px;
-    height: 90px;
+    width: 18.75rem;
+    height: 5.625rem;
     background-color: #F6BE9A;
     text-align: center;
   }
 
   .price-tag p{
     font-weight: 800;
-    font-size: 23px;
-    line-height: 95px;
+    font-size: 1.4375rem;
+    line-height: 5.9375rem;
     text-align: center;
   }
 
@@ -318,7 +323,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 57px;
+    gap: 3.563rem;
     font-size: 1.1rem;
     font-weight: 600;
   }
@@ -332,12 +337,12 @@
   }
 
   .youtube{
-    width: 80px;
-    margin-top: 8px;
+    width: 5rem;
+    margin-top: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 7px;
+    gap: 0.4375rem;
   }
 
   @media only screen and (max-width: 768px){
